Improved Tests and Removed Ordering and Deleted UpdateMovieDto